testsuite/poke.pkl/offset-type-diag-2.pk
/* { dg-do compile } */

fun foo = (offset<byte[],byte> input, /* { dg-error "shall be integral" } */
             int len) int:
{
    var ret = 0;
    return ret;
}
